change on header

--- a/book.html
+++ b/book.html
@@ -8,11 +8,27 @@
     <title>contactUs</title>
 </head>
 <body>
+    <div class="nav">
+        <div class="logo">
+          <img src="./image/log.jpg" alt="logo" class="img-log" />
+        </div>
+        <div>
+          <ul class="nav-links">
+            <li class="nav-link"> <a href="index.html">Home</a> </li>
+            <li class="nav-link"> <a href="#aboutus">about-us</a> </li>
+            <li class="nav-link"> <a href="/contact.html">contact-us</a> </li>
+            <li class="nav-link"><a href="/garelley.html">Garelley</a> </li>
+            <li class="nav-link nav-btn"><a href="/signin.html">Signin</a> </li>
+            <li class="nav-link nav-btn"> <a href="book.html">Book Now</a> </li>
+          </ul>
+        </div>
+      </div>
     <div class="contact-container" >
         <!-- <video autoplay loop class="video-background" muted plays-inline >
             <source src="./image/Volcanoes National Park Experiential Centre - Rwanda.mp4">
 
         </video> -->
+        
         <h1>VISIT RWANDA </h1>
         <div class="content">
       
