--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div>
           <ul class="nav-links">
-            <li class="nav-link"> <a href="#home"></a> Home</li>
+            <li class="nav-link"> <a href="index.html"></a> Home</li>
             <li class="nav-link"> <a href="#aboutus"></a> about-us</li>
             <li class="nav-link"> <a href="/contact.html"></a> contact-us</li>
             <li class="nav-link"><a href="/garelley.html"></a> Garelley</li>
