change contact.html book.html

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <ul class="nav-links">
             <li class="nav-link"> <a href="index.html"></a> Home</li>
             <li class="nav-link"> <a href="#aboutus"></a> about-us</li>
-            <li class="nav-link"> <a href="/contact.html"></a> contact-us</li>
-            <li class="nav-link"><a href="/garelley.html"></a> Garelley</li>
-            <li class="nav-link nav-btn"><a href="/signin.html"></a> Signin</li>
+            <li class="nav-link"> <a href="contact.html"></a> contact-us</li>
+            <li class="nav-link"><a href="garelley.html"></a> Garelley</li>
+            <li class="nav-link nav-btn"><a href="signin.html"></a> Signin</li>
             <li class="nav-link nav-btn"> <a href="book.html">Book Now</a> </li>
           </ul>
         </div>
@@ -51,7 +51,7 @@
             pariatur.
           </p>
         </div>
-        <button class="button">Book Now</button>
+       <a href="book.html"> <button class="button">Book Now</button></a>
       </div>
     </header>
     <div class="tour-container" id="aboutus">
